# xoi

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  index.html  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: deploy.yml  lint.yml  release.yml  test.yml
agent/: __init__.py  executor.py  memory.py  planner.py  reasoning.py  registry.py  tools.py  workflow.py
api/: __init__.py  auth.py  dependencies.py  server.py  websocket.py
api/routes/: ai.py  chat.py  crawler.py  health.py  search.py  settings.py
api/schemas/: models.py
backend/: .env.example  README.md  requirements.txt  vercel.json
backend/api/: index.py
backend/app/: config.py  main.py
backend/app/api/models/: request_models.py  response_models.py
backend/app/api/routes/: __init__.py  auth.py  chat.py  chat_stream.py  history.py  settings.py  (+2 more)
backend/app/controllers/: orchestrator.py
backend/app/core/: agent.py  dependencies.py  hf_client.py  limiter.py  mcp_client.py  rapidapi_client.py  social_client.py  telegram_client.py  tools.py
backend/app/database/: connection.py  initialize.py  models.py  neon_client.py
backend/app/middleware/: error_handler.py
backend/app/services/: auth_service.py  browserless_service.py  cache_service.py  chat_service.py  history_service.py  telegram_service.py
backend/app/utils/: error_handlers.py  file_handler.py  loading.html  validators.py
cache/: __init__.py  cache_manager.py  memory_cache.py  redis_cache.py
cli/: __init__.py  main.py  utils.py
cli/commands/: analyze.py  ask.py  chat.py  code.py  config.py  crawl.py  health.py  models.py  scrape.py  search.py  summarize.py  version.py
config/: __init__.py  constants.py  logging.py  models.json  openrouter.json  settings.py
crawler/: __init__.py  browser.py  cleaner.py  extractor.py  fetcher.py  markdown.py  parser.py  robots.py  sitemap.py
database/: __init__.py  chroma.py  postgres.py  redis.py  sqlite.py
docs/: api_reference.md  deployment_guide.md  mcp_setup.md
frontend/: about.html  docs.html  index.html  login.html  register.html  reset.html  skills.html  vercel.json
frontend/pages/: about.html  chat.html  docs.html  getstarted.html  index.html  login.html  register.html  reset.html  skills.html
frontend/src/css/: animations.css  auth.css  chat.css  design-system.css  docs.css  skills.css  style.css
frontend/src/js/: animations.js  app.js  auth.js  chat.js  fileUpload.js  history.js  settings.js  utils.js
frontend/src/pages/: about.html  docs.html  index.html  login.html  register.html  reset.html  skills.html
llm/: __init__.py  client.py  models.py  prompts.py  router.py  tokenizer.py
llm/providers/: fallback.py  openrouter.py
logger/: __init__.py  access_logger.py  error_logger.py  formatter.py  logger.py  request_logger.py
monitoring/: __init__.py  alerts.py  health.py  metrics.py  profiler.py  tracing.py
rag/: __init__.py  chunker.py  embedding.py  generator.py  retriever.py  vector_store.py
scheduler/: __init__.py  cron.py  jobs.py  queue.py  worker.py
scripts/: deploy.sh  install.sh  migrate.sh  run.sh  test.sh
security/: __init__.py  encryption.py  jwt.py  permissions.py  rate_limit.py  secrets.py
tests/api/: test_api.py
tests/llm/: __init__.py
tests/unit/: test_agent.py  test_crawler.py  test_llm.py
(+4 files in other folders)
