[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "web-agent-platform"
version = "0.1.0"
description = "A powerful AI agent platform for web automation, crawling, and intelligent task execution"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Web Agent Team", email = "team@webagent.dev"}
]
keywords = ["ai", "agent", "web", "crawler", "automation", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "markdown>=3.5.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "chromadb>=0.4.0",
    "openai>=1.3.0",
    "tiktoken>=0.5.0",
    "langchain>=0.0.350",
    "langchain-community>=0.0.1",
    "celery>=5.3.0",
    "APScheduler>=3.10.0",
    "structlog>=23.2.0",
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "httpx-sse>=0.4.0",
    "websockets>=12.0",
    "python-robots>=0.1.0",
    "jinja2>=3.1.0",
    "tenacity>=8.2.0",
    "trafaret>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "safety>=3.0.0",
    "bandit>=1.7.0",
]
docker = [
    "docker>=7.0.0",
    "docker-compose>=1.29.0",
]
all = [
    "web-agent-platform[dev,docker]",
]

[project.scripts]
wap = "cli.main:main"
wap-server = "api.server:main"

[project.urls]
Homepage = "https://github.com/amkyawdev/xoi"
Documentation = "https://docs.webagent.dev"
Repository = "https://github.com/amkyawdev/xoi"
Issues = "https://github.com/amkyawdev/xoi/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*", "agent*", "llm*", "crawler*", "rag*", "api*", "database*", "logger*", "monitoring*", "security*", "cache*", "scheduler*", "config*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "T20"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
